--- a/newCRUD/crud.html
+++ b/newCRUD/crud.html
@@ -1,4 +1,50 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Document</title>
+  <script src="crud.js"></script>
+</head>
+<body>
+  <div id="wrapper">
+    <table
+      align="center"
+      cellspacing="2"
+      cellpadding="5"
+      id="data_table"
+      border="1"
+    >
+      <tr>
+        <th>Name</th>
+        <th>Country</th>
+        <th>Age</th>
+      </tr>
+
+      <tr>
+        <td><input type="text" id="new_name" /></td>
+        <td><input type="text" id="new_country" /></td>
+        <td><input type="text" id="new_age" /></td>
+        <td>
+          <input
+            type="button"
+            class="add"
+            onclick="add_row();"
+            value="Add Row"
+          />
+        </td>
+      </tr>
+    </table>
+  </div>
+</body>
+</html>
+
+
+
+
+<!-- <!DOCTYPE html>
   <head>
     <script type="text/javascript" src="crud.html"></script>
   </head>
@@ -17,7 +63,7 @@
           <th>Age</th>
         </tr>
 
-        <tr id="row1">
+        <!-- <tr id="row1">
           <td id="name_row1">Ankit</td>
           <td id="country_row1">India</td>
           <td id="age_row1">20</td>
@@ -99,8 +145,8 @@
               onclick="delete_row('3')"
             />
           </td>
-        </tr>
-
+        </tr> -->
+<!-- 
         <tr>
           <td><input type="text" id="new_name" /></td>
           <td><input type="text" id="new_country" /></td>
@@ -117,4 +163,4 @@
       </table>
     </div>
   </body>
-</html>
+</html>  -->
