--- a/ComplerteJS/crud/local.html
+++ b/ComplerteJS/crud/local.html
@@ -16,6 +16,8 @@
             <label for="key" >Key</label>
             <input type="text" id="key" placeholder="Key" required><br>
             <button type="submit">Store Records</button>
+            <p id="edit"><b> Click "Edit" button to edit content. </b></p>
+            <button type="submit" id="edit-button">Edit</button>
         </form>
         <br>
         <label for="retrieveKey" >Enter Key to retrieve item</label>
@@ -37,8 +39,8 @@
           </table>
         </div>
         <br>
-        <input type="text" id="updateKey" placeholder="updateKey" required><br>
-        <button id="editButton">Edit records</button><br>
+        <!-- <input type="text" id="updateKey" placeholder="updateKey" required><br>
+        <button id="editButton">Edit records</button><br> -->
         <label for="removeKey" >Enter Key to delete item</label><br>
         <input type="text" id="removeKey" placeholder="removeKey" required><br>
         <button id="removeButton">Remove record</button>
