myapp working fully

--- a/ComplerteJS/crud/local.html
+++ b/ComplerteJS/crud/local.html
@@ -20,7 +20,7 @@
             <button type="submit" id="edit-button">Edit</button>
         </form>
         <br>
-        <label for="retrieveKey" >Enter Key to retrieve item</label>
+        <label for="retrieveKey" >Enter Key to retrieve Emp</label>
         <input type="text" id="retrieveKey" placeholder="retrieveKey" required><br>
         <button id="retrieveButton">Retrieve records</button>
         <br>
@@ -41,7 +41,7 @@
         <br>
         <!-- <input type="text" id="updateKey" placeholder="updateKey" required><br>
         <button id="editButton">Edit records</button><br> -->
-        <label for="removeKey" >Enter Key to delete item</label><br>
+        <label for="removeKey" >Enter Key to delete Emp</label><br>
         <input type="text" id="removeKey" placeholder="removeKey" required><br>
         <button id="removeButton">Remove record</button>
         <br>
