--- a/CRUDs/crudApp1/myapp.html
+++ b/CRUDs/crudApp1/myapp.html
@@ -49,8 +49,12 @@
             </ul>
         </fieldset>
     </section>
-    </form>
-    <hr>
-    <table id="tableList"></table>
+</form>
+<hr>
+<table id="tableList"></table>
+<li>
+    <button class="btn btn-danger" onclick="fetchData()">fetchData</button>
+</li>
+
 </body>
 </html>
