--- a/ComplerteJS/dom/dom.html
+++ b/ComplerteJS/dom/dom.html
@@ -19,7 +19,8 @@
     <p class="para">Okay keep going keep going</p>
     <p class="para">You can do that</p>
     <div id="heading">This is the heading</div>
-
-    <button onclick="changeContent()">Click  Me</button>
+    <a href="#" class="noClass" id="thirdWay">thirdWay
+    </a>
+    <div id="butn">Click  Me</div>
 </body>
 </html>
