add favourite meall done

--- a/javascript-basic-projects-master/javascript-basic-projects-master/03-reviews/setup/index.html
+++ b/javascript-basic-projects-master/javascript-basic-projects-master/03-reviews/setup/index.html
@@ -14,8 +14,36 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
-    <!-- javascript -->
+   <main>
+     <section class="container">
+       <div class="title">
+         <h2>Our Reviews</h2>
+         <div class="underline">
+         </div>
+
+         <article class="review">
+           <div class="img-container">
+             <img src="./person-1.jpeg" id="person-img" alt="" class="src">
+           </div>
+           <h4 id="author">Sara Jones</h4>
+           <h4 id="job">UX Designer</h4>
+           <p id="info">
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, voluptatibus! Aliquam ut eos accusamus aspernatur accusantium, exercitationem eligendi veniam quas, eveniet maxime magnam? Voluptas deleniti debitis numquam hic id repudiandae.
+           </p>
+           <div class="button-container">
+             <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+             </button>
+             <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+             </button>
+           </div>
+           <button class="random-btn">Surprise Me</button>
+
+          </article>
+       </div>
+     </section>
+   </main>
     <script src="app.js"></script>
   </body>
 </html>
