--- a/javascript-basic-projects-master/javascript-basic-projects-master/05-sidebar/final/index.html
+++ b/javascript-basic-projects-master/javascript-basic-projects-master/05-sidebar/final/index.html
@@ -11,6 +11,7 @@
     />
 
     <!-- styles -->
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
