--- a/recipeApp/inedex.html
+++ b/recipeApp/inedex.html
@@ -39,8 +39,14 @@
       </ul>
     </div>
   </div> -->
-    
-  </div>
+    <div class="popup-container hidden" id="meal-popup">
+      <div class="popup">
+        <button class="close-popup" id="close-popup"><i class="fas fa-times"></i>
+        </button>
+        <div class="meal-info" id="meal-info"></div>
+      </div>
+    </div>
+
   
 </body>
 </html>
