--- a/NotesApp/index.html
+++ b/NotesApp/index.html
@@ -11,17 +11,25 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-     <div class="notes">
-         <div class="tools">
-            <button class="edit"><i class="fas fa-edit"></i></button>
-            <button class="delete"><i class="fas fa-trash-alt"></i></button>
+    <header>
+        <h1>Our To Do List</h1>
+    </header>
+    <form action="">
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit">
+            <i class="fas fa-plus-square"></i>
+        </button>
+        <div class="select">
+            <select name="todos" class="filter-todos">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="uncompleted">Uncompleted</Uption>
+            </select>
         </div>
-        <div class="main">
-
-        </div>
-        <textarea name="" id="" cols="30" rows="10">
-            
-        </textarea>
+    </form>
+    <div class="todo-container">
+        <ul class="todo-list"></ul>
     </div>
-</body>
+
+    </body>
 </html>
